--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,7 +1,7 @@
 <span class="credits left">
   <a href="{{ "/blog" | prepend:site.baseurl }}">Posts</a> |
-  <a href="{{ "/resume" | prepend:site.baseurl }}">Resume</a> |
-  <a href="{{ "/projects" | prepend:site.baseurl }}">Projects</a>
+  <a href="{{ "/projects" | prepend:site.baseurl }}">Projects</a> |
+  <a href="{{ "/resume" | prepend:site.baseurl }}">Resume</a>
 </span>
 
 <span class="credits right">
