--- a/_includes/nav-links.html
+++ b/_includes/nav-links.html
@@ -1,4 +1,5 @@
 <span class="credits left">
+  <a href="{{ "/index.html" | prepend:site.baseurl }}">Home</a> |
   <a href="{{ "/blog" | prepend:site.baseurl }}">Posts</a> |
   <a href="{{ "/projects" | prepend:site.baseurl }}">Projects</a> |
   <a href="{{ "/resume" | prepend:site.baseurl }}">Resume</a>
