--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="{{"/public/stylesheets/jquery.bxslider.css"}}" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="icon" type="image/x-icon"  href="{{ "/favicon.ico" | prepend:site.baseurl }}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="/public/javascripts/pdfobject.js"></script>
-      <link rel="icon" type="image/x-icon"  href="{{ "/favicon.ico" | prepend:site.baseurl }}" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="/public/javascripts/jquery.bxslider.min.js"></script>
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -29,8 +31,9 @@
         </section>
     </div>
     </div>
-    <script src="{{ "/public/javascripts/jquery.min.js" | prepend:site.baseurl }}"></script>
+    <!---<script src="{{ "/public/javascripts/jquery.min.js" | prepend:site.baseurl }}"></script>
     <script src="{{ "/public/javascripts/bootstrap.min.js" | prepend:site.baseurl }}"></script>
+    --->
     {% include scripts.html %}
   </body>
 </html>
