--- a/_includes/title.html
+++ b/_includes/title.html
@@ -8,7 +8,7 @@
   </h1>
 
   <!-- Add something about you in p tag-->
-  <p>Programmer | Game Developer | 3D Artist | Entrepreneur</p>
+  <p>Programmer | Game Developer/ Designer | Entrepreneur</p>
   <hr/>
 
   {% include nav-links.html %}
