--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,6 @@
   <div class="c-navigation__container u-container">
     <a class="c-navigation__item {% if page.url == '/' %}is-active{% endif %}" href="{{ "/" | prepend: site.baseurl }}">Home</a>
     <a class="c-navigation__item {% if page.url == '/articles/' %}is-active{% endif %}" href="{{ "/articles/" | prepend: site.baseurl }}">Articles</a>
-    <a class="c-navigation__item {% if page.url == '/about/' %}is-active{% endif %}" href="{{ "/projects/" | prepend: site.baseurl }}">Projects</a>
+    <a class="c-navigation__item {% if page.url == '/games/' %}is-active{% endif %}" href="{{ "/games/" | prepend: site.baseurl }}">Games</a>
   </div>
 </nav>
