--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,5 +3,7 @@
     <a class="c-navigation__item {% if page.url == '/' %}is-active{% endif %}" href="{{ "/" | prepend: site.baseurl }}">Home</a>
     <a class="c-navigation__item {% if page.url == '/articles/' %}is-active{% endif %}" href="{{ "/articles/" | prepend: site.baseurl }}">Articles</a>
     <a class="c-navigation__item {% if page.url == '/games/' %}is-active{% endif %}" href="{{ "/games/" | prepend: site.baseurl }}">Games</a>
+   <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/projects/" | prepend: site.baseurl }}">Projects</a>
+   <a class= "c-navigation__item" href="/documents/Resume_PorrithSuong.pdf">Resume</a>
   </div>
 </nav>
