--- a/_sass/base/_reset.scss
+++ b/_sass/base/_reset.scss
@@ -37,6 +37,12 @@ h2 {
   display: block;
 }
 
+#screenshots {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 article,
 aside,
 figcaption,
