--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
       {% if site.twitterUsername %}<a href="https://twitter.com/{{ site.twitterUsername }}">Twitter</a>{% endif %}
       {% if site.githubUsername %}<a href="https://github.com/{{ site.githubUsername }}">Github</a>{% endif %}
       {% if site.bitbucketUsername %}<a href="https://bitbucket.com/{{ site.bitbucketUsername }}">Bitbucket</a>{% endif %}
+      {% if site.linkedinUsername %}<a href="https://www.linkedin.com/in/{{ site.linkedinUsername }}">LinkedIn</a>{% endif %}
       {% if site.dribbbleUsername %}<a href="https://dribbble.com/{{ site.dribbbleUsername }}">Dribbble</a>{% endif %}
       {% if site.codepenUsername %}<a href="http://codepen.io/{{ site.codepenUsername }}">CodePen</a>{% endif %}
     </p>
